# sam-ahadi

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  Tour.md  build-all.sh  install.sh  mypy.ini  pack.sh  pyproject.toml  pyrightconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
docs/source/: about.md  conf.py  index.rst
notebooks/: README.md  example_notebook.ipynb
src/: __init__.py  main.py
src/helpers/: calc_mag.py
tests/: __init__.py  test_main.py
