[tool.poetry]
name = "devops-python-app"
version = "0.1.0"
description = "Sample Python app & Jupyter notebook for DevOps"
authors = ["jeano"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.7.0"}
isort = "^5.11.4"
numpy = "^1.26.4"
cdflib = "^1.3.1"
matplotlib = "^3.9.0"
pandas = "^2.2.2"
ipympl = "^0.9.4"
ipywidgets = "^8.1.2"
pre-commit = "^3.7.1"
ipytest = "^0.14.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
black = "^22.12.0"
flake8 = "^6.0.0"
ipykernel = "^6.29.4"

[tool.poetry.scripts]
# can execute via poetry, e.g. `poetry run demo hello world`
demo = 'src.main:app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
^/(
  (
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
